--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     </style>
 </head>
 <body>
-    <h1>Station 43</h1>
+    <h1>SerialN 43</h1>
     <div id="question"></div>
     <div id="options"></div>
     <button onclick="nextQuestion()">SUBMIT</button>
     <script>
         // Function to clear the quiz score from local storage
 function clearQuizScore() {
-    localStorage.removeItem("Station_43_Score");
+    localStorage.removeItem("SerialN_43_Score");
 }
 
 // Function to clear local storage when the tab is closed or refreshed
@@ -53,7 +53,7 @@ window.addEventListener('beforeunload', function() {
         ];
 
         let currentQuestion = 0;
-        let Station_43_Score = 0;
+        let SerialN_43_Score = 0;
 
         // Function to display current question
         function displayQuestion() {
@@ -95,9 +95,9 @@ window.addEventListener('beforeunload', function() {
     }
 
     if (!isAnswered || selectedOption !== quiz[currentQuestion].answer) {
-        Station_43_Score = 0; // Assign zero score if question is not attempted or answered incorrectly
+        SerialN_43_Score = 0; // Assign zero score if question is not attempted or answered incorrectly
     } else {
-        Station_43_Score++; // Increment score for correct answer
+        SerialN_43_Score++; // Increment score for correct answer
     }
 }
 
@@ -108,8 +108,8 @@ window.addEventListener('beforeunload', function() {
 
             if (currentQuestion === quiz.length) {
                 // All questions answered, store score in local storage
-                localStorage.setItem("Station_43_Score", Station_43_Score);
-                alert("Quiz completed. Your score is " + Station_43_Score);
+                localStorage.setItem("SerialN_43_Score", SerialN_43_Score);
+                alert("Quiz completed. Your score is " + SerialN_43_Score);
             } else {
                 displayQuestion();
             }
